--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
 /target
+testing0.png
+testing1.png
+testing2.png
+testing3.png
+testing4.png
+testing5.png
+testing6.png
+testing7.png
+testing8.png
+testing9.png
+testing10.png
+testing11.png
+testing12.png
+testing13.png
+testing14.png
+testing15.png
+testing16.png
+testing17.png
+testing18.png
+testing19.png
